--- a/preamble.tex
+++ b/preamble.tex
@@ -20,7 +20,7 @@
 \usepackage[T1]{fontenc}
 
 \usepackage{tikz}
-\usetikzlibrary{matrix,calc,3d,arrows,positioning,fadings}
+\usetikzlibrary{matrix,calc,3d,arrows,positioning,fadings,shapes}
 
 \usepackage{tikz-cd}
 \makeatletter
