--- a/unknowns.tex
+++ b/unknowns.tex
@@ -1359,6 +1359,23 @@ Let $F_d$ denote the discrepancy spectrum for $E_d$.  There is a natural equival
 
 
 
+\begin{example}
+Here's a calculation that's supposed to explain why $H \sm_{kU} H$ (or $H \sm_{kO} H$ from \Cref{kOASSExample}) is what it is.  We calculate what a generic automorphism of $\CP^\infty_{kU}$ looks like: set \[f(t) = \sum_{\ell \ge 0} a_\ell t^{\ell + 1},\] impose $f(x) +_{kU} f(y) = f(x +_{kU} y)$, and start computing:
+\begin{align*}
+f(x) +_{kU} f(y) & = \sum_{i \ge 0} a_i x^{i+1} + \sum_{j \ge 0} a_j y^{j+1} - \sum_{i, j \ge 0} \beta a_i a_j x^{i+1} y^{j+1} \\
+f(x +_{kU} y) & = \sum_{\ell \ge 0} a_\ell (x + y - \beta xy)^{\ell+1} \\
+& = \sum_{\ell \ge 0} \sum_{|J| = \ell + 1} a_\ell \beta^{J_3} \binom{\ell + 1}{J} x^{J_1 + J_3} y^{J_2 + J_3}.
+\end{align*}
+Fixing $i \ge j \ge 0$, extracting the $x^{i+1} y^{j+1}$ terms from both sides yields
+\begin{align*}
+\beta a_i a_j & = \sum_{k=0}^j \beta^k a_{i+j-k+1} \binom{i+j-k+2}{i-k+1, j-k+1, k} = a_{i+j-1} \binom{i+j+2}{i+1,j+1} + \beta(\cdots).
+\end{align*}
+After setting $\beta = 0$, this receives a map from $\sheaf O(\InternalAut(\G_a))$, and in fact that map is a quotient by whatever is leftover of the above relations, which kills $a_{p^m - 1}$ whenever $p^m$ can be written as $p^m = i + j$ in such a way that $(i+1)+(j+1)$ has no $p$--adic carries.  At odd primes this kills every $p^m$ and at $p = 2$ it kills everything but $m = 0$ and $m = 1$.  This recovers the projection $\mathcal A_* \to E(1)_*$.  The idea underlying this is that $\CP^\infty_{kU}$ belongs to a moduli of formal groups, which has an enrichment to a sheaf of spectra which totalizes to give $kU$ itself.  The relative smash product $H \sm_{kU} H$ is studying the restriction of automorphisms of this family to automorphisms ``at the boundary'', i.e., of the additive group.  The algebraic version of this problem is to study those automorphisms of $\G_a$ which extend to automorphisms of this family, and in how many ways this is possible.
+\end{example}
+
+
+
+
 free $E_\infty$--orientations off of $MU$
 
 
